--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pum Help</title>
   </head>
-  <body class="flex flex-col h-screen">
+  <body class="relative flex flex-col h-screen">
     <div id="root" class="flex flex-col flex-1 h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
